<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_taqui"
        android:src="@drawable/logo"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/rounded_white_with_gray_border"
        android:padding="16dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/background_color"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_password"
            android:textSize="12sp"
            android:textColor="@color/subtitle_text_color"
            android:layout_marginLeft="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_marginTop="30dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/input_background_color"
            app:boxStrokeColor="@color/input_stroke_color"
            app:hintTextColor="@color/hint_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/input_text_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/input_background_color"
            app:boxStrokeColor="@color/input_stroke_color"
            app:hintTextColor="@color/hint_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/senha_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/input_text_color"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/keep_connected"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/keep_connected"
                android:textSize="12sp"
                android:textColor="@color/subtitle_text_color"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/background_color"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="190dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/button_background_color"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:text="@string/login_button"
                android:textColor="@color/button_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="190dp"
                android:layout_height="55dp"
                android:backgroundTint="@color/button_text_color"
                android:text="@string/register_button"
                android:textColor="@color/button_secondary_text_color"
                android:textSize="20sp"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_or_enter_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_enter_with"
            android:textSize="12sp"
            android:textColor="@color/subtitle_text_color"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/btn_facebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/facebook"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/facebook" />

            <ImageView
                android:id="@+id/btn_google"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/google"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/google" />

            <ImageView
                android:id="@+id/btn_apple"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/apple"
                android:contentDescription="@string/apple" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
