<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:weightSum="3">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_description" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="end"
        android:layout_marginStart="150dp">

        <TextView
            android:id="@+id/greeting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting_text"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">

        <ImageView
            android:id="@+id/avatar_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/avatar_description"
            android:src="@drawable/avatare" />
    </LinearLayout>
</LinearLayout>
